# NeuroSight

./: .dockerignore  .dvcignore  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  app.py  app_local.py  constraints.txt  deploy_and_run.py  docker-compose.yml  dvc.yaml  knowledge_graph.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-space.txt  requirements.txt  requirements_ui.txt  ruff.toml  spaces_config.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: main.py
data/: ADNIMERGE_synthetic.csv
docs/: AI_SAFETY_OWASP_GENAI.md  API_CONTRACT_CHECKS.md  API_EXAMPLES.md  ARCHITECTURE_OVERVIEW.md  CHECKPOINT_EVALUATION.md  CI_CD_QUALITY_GATE.md  DATA_DEMO_PIPELINE.md  DEMO_RUNBOOK.md  DEMO_SCRIPT.md  DICOM_DICOMWEB.md  DRIFT_MONITORING.md  DVC_PROVENANCE.md  FHIR_EXPORT.md  GITHUB_RELEASE_READINESS.md  HUGGING_FACE_DEPLOYMENT.md  IMPLEMENTED_VS_PLANNED.md  LANGGRAPH_AGENT_WORKFLOW.md  MLFLOW_REGISTRY.md  MODALITY_PREPROCESSING.md  MODEL_CARD_POLISH.md  MONAI_PIPELINE.md  ONNX_RUNTIME_EXPORT.md  OPENTELEMETRY_OBSERVABILITY.md  PORTFOLIO_CHECKLIST.md  PRIVATE_DATA_ADAPTERS.md  PUBLIC_REPOSITORY_GUIDE.md  REGULATORY_POSITIONING.md  REPOSITORY_HYGIENE.md  REPRODUCIBILITY.md  RISK_REGISTER.md  RUNNING_MODES.md  SECURITY_SUPPLY_CHAIN.md  TECHNICAL_REPORT.md  TRUST_EXPLAINABILITY.md  architecture.md
evaluation/: __init__.py  ablation.py  benchmark.py  benchmark_table.py  calibration.py  cross_validation.py  metrics.py  report.py  results.json  robustness.py
federated/: federated_demo.py
frontend/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
hf_space/: .dockerignore  Dockerfile  README.md  requirements.txt  requirements_backend.txt
local_ui/: app.js  index.html  style.css
neurosight/: contracts.py
notebooks/: neurosight_demo.ipynb
scripts/: ai_safety_eval.py  api_contract_check.py  check_python_version.py  check_repo_hygiene.py  create_demo_checkpoint.py  create_demo_gif.py  deploy_hf_backend.py  (+24 more)
(+105 files in other folders)
